src/snapshots/fern__ir__tests__assignments.snap
---
source: src/ir.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        Int,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 1,
                                    ty: Int,
                                },
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 42,
                                    ty: Int,
                                },
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        0,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        1,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 7,
                                    ty: Int,
                                },
                            },
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        2,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    3,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    3,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
