src/snapshots/fern__ir__tests__converted_literal_exit.snap
---
source: src/ir.rs
expression: entry.entry()
---
Entry {
    values: [
        Value {
            ty: Int,
            kind: Convert(
                Integer {
                    value: 42,
                    ty: I16,
                },
            ),
        },
    ],
    exit: Value(
        ValueId(
            0,
        ),
    ),
}
