src/snapshots/fern__ir__tests__early_exit.snap
---
source: src/ir.rs
expression: entry.entry()
---
Entry {
    values: [
        Value {
            span: None,
            ty: Int,
            kind: Copy(
                Integer {
                    value: 42,
                    ty: Int,
                },
            ),
        },
    ],
    exit: Value(
        ValueId(
            0,
        ),
    ),
}
