src/snapshots/fern__ir__tests__empty.snap
---
source: src/ir.rs
expression: entry.entry()
---
Entry {
    values: [],
    exit: Integer(
        0,
    ),
}
