src/snapshots/fern__ir__tests__literals.snap
---
source: src/ir.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Int,
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 7,
                                    ty: Int,
                                },
                            },
                        ],
                        terminator: Return {
                            value: None,
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
